--- a/Assignment1/Assignment1.csproj
+++ b/Assignment1/Assignment1.csproj
@@ -216,6 +216,35 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\Alien.jpg" />
+    <Content Include="Content\Images\avatar.jpg" />
+    <Content Include="Content\Images\batman.jpg" />
+    <Content Include="Content\Images\da vinci.jpg" />
+    <Content Include="Content\Images\download.jpg" />
+    <Content Include="Content\Images\Dunkirk.jpg" />
+    <Content Include="Content\Images\gladiator.jpg" />
+    <Content Include="Content\Images\gone.jpg" />
+    <Content Include="Content\Images\hobbit.jpg" />
+    <Content Include="Content\Images\interstellar.jpg" />
+    <Content Include="Content\Images\jurasic.jpg" />
+    <Content Include="Content\Images\lincoln.jpg" />
+    <Content Include="Content\Images\moana.jpg" />
+    <Content Include="Content\Images\movielogo.jpg" />
+    <Content Include="Content\Images\network.jpg" />
+    <Content Include="Content\Images\placeholder.gif" />
+    <Content Include="Content\Images\rush.jpg" />
+    <Content Include="Content\Images\Site.css" />
+    <Content Include="Content\Images\the-departed-3.jpg" />
+    <Content Include="Content\Images\the-martian-5.jpg" />
+    <Content Include="Content\Images\the-prestige.jpg" />
+    <Content Include="Content\Images\the_hangover18.jpg" />
+    <Content Include="Content\Images\thor.jpg" />
+    <Content Include="Content\Images\wall street.jpg" />
+    <Content Include="css\bootstrap-theme.css" />
+    <Content Include="css\bootstrap-theme.min.css" />
+    <Content Include="css\bootstrap.css" />
+    <Content Include="css\bootstrap.min.css" />
+    <Content Include="css\carousel.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -250,8 +279,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
